force-app/main/default/objects/Lead/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <label>Age Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Range</valueSetName>
    </valueSet>
</CustomField>