force-app/main/default/objects/Lead/fields/Original_Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription_Date__c</fullName>
    <description>Stores the original subscription date of the lead from the previous system (e.g., systeme.io).</description>
    <label>Original Subscription Date</label>
    <type>DateTime</type>
</CustomField>