force-app/main/default/objects/Lead/fields/RGPD_Consent__c.field-meta.xml
<CustomField>
    <fullName>RGPD_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGPD Consent</label>
    <type>Checkbox</type>
</CustomField>